--- a/announcement.html
+++ b/announcement.html
@@ -71,15 +71,16 @@
     </ul>
   </div>
 
-  <div class="announcement-section mb-5">
-    <h4 class="section-heading">🗃️ Data Release Schedule</h4>
-    <ul>
-      <li>Pilot data available: <strong>TBD</strong></li>
-      <li>Full training/dev/test splits: <strong>TBD</strong></li>
-      <li>Evaluation phase: <strong>TBD5</strong></li>
-      <li>Paper submission to SemEval: <strong>TBD</strong></li>
-    </ul>
-  </div>
+<div class="announcement-section mb-5">
+  <h4 class="section-heading">🗃️ Data Release Schedule</h4>
+  <ul>
+    <li>Pilot data available: <strong>8 August 2025</strong></li>
+    <li>Full training/dev/test splits: <strong>1 September 2025</strong></li>
+    <li>Evaluation phase: <strong>10 January – 31 January 2026</strong></li>
+    <li>Paper submission to SemEval: <strong>February 2026</strong></li>
+  </ul>
+</div>
+
 
   <div class="announcement-section mb-5">
     <h4 class="section-heading">📈 Who Can Participate?</h4>
