--- a/dates.html
+++ b/dates.html
@@ -32,46 +32,47 @@
         </tr>
       </thead>
       <tbody>
-        <tr>
-          <td>TBD</td>
-          <td>Call for Participation Opens</td>
-        </tr>
-        <tr>
-          <td>TBD</td>
-          <td>Trial Data Released</td>
-        </tr>
-        <tr>
-          <td>TBD</td>
-          <td>Training Data Released</td>
-        </tr>
-        <tr>
-          <td>TBD</td>
-          <td>Test Data Released</td>
-        </tr>
-        <tr>
-          <td>TBD</td>
-          <td>System Submission Deadline</td>
-        </tr>
-        <tr>
-          <td>TBD</td>
-          <td>Evaluation Results Released</td>
-        </tr>
-        <tr>
-          <td>TBD</td>
-          <td>System Paper Submission Deadline</td>
-        </tr>
-        <tr>
-          <td>TBD</td>
-          <td>Notification of Acceptance</td>
-        </tr>
-        <tr>
-          <td>TBD</td>
-          <td>Camera-Ready Papers Due</td>
-        </tr>
-        <tr>
-          <td>TBD</td>
-          <td>SemEval-2026 Workshop at [Conference Location TBD]</td>
-        </tr>
+     
+    <td>31 March 2025</td>
+    <td>Call for Participation Opens / Task Proposals Due</td>
+  </tr>
+  <tr>
+    <td>8 August 2025</td>
+    <td>Trial Data Released</td>
+  </tr>
+  <tr>
+    <td>1 September 2025</td>
+    <td>Training Data Released</td>
+  </tr>
+  <tr>
+    <td>1 December 2025</td>
+    <td>Test Data Released (internal deadline; not for public release)</td>
+  </tr>
+  <tr>
+    <td>10 January 2026</td>
+    <td>System Submission Deadline / Evaluation Start</td>
+  </tr>
+  <tr>
+    <td>31 January 2026</td>
+    <td>Evaluation Results Released / Evaluation End</td>
+  </tr>
+  <tr>
+    <td>February 2026</td>
+    <td>System Paper Submission Deadline</td>
+  </tr>
+  <tr>
+    <td>March 2026</td>
+    <td>Notification of Acceptance</td>
+  </tr>
+  <tr>
+    <td>April 2026</td>
+    <td>Camera-Ready Papers Due</td>
+  </tr>
+  <tr>
+    <td>Summer 2026</td>
+    <td>SemEval-2026 Workshop at [Conference Location TBD]</td>
+  </tr>
+
       </tbody>
     </table>
   </div>
