--- a/news.html
+++ b/news.html
@@ -26,17 +26,17 @@
 
     <h3>📅 Recent Announcements</h3>
     <ul>
-      <li><strong>TBD</strong><br>
+      <li><strong>31 March 2025</strong><br>
         Task Website Launched!<br>
         Welcome to the official website of the POLAR shared task. We’re excited to share details about the task and how you can participate.
       </li>
-      <li><strong>TBD</strong><br>
+      <li><strong>31 March 2025</strong><br>
         Call for Participation (CFP) Released<br>
         The CFP has been officially distributed through ACL and SemEval mailing lists. Please help us spread the word!
       </li>
-      <li><strong>TBD</strong><br>
-        Trial Dataset Coming Soon<br>
-        We will release a small trial dataset so participants can explore the data format and annotation scheme.
+      <li><strong>8 August 2025</strong><br>
+        Trial Dataset Released<br>
+        We have released a small trial dataset so participants can explore the data format and annotation scheme.
       </li>
     </ul>
 
@@ -51,31 +51,43 @@
       <tbody>
         <tr>
           <td style="padding: 8px;">Trial Data Release</td>
-          <td style="padding: 8px;">TBD</td>
+          <td style="padding: 8px;">8 August 2025</td>
         </tr>
         <tr>
           <td style="padding: 8px;">Registration Opens</td>
-          <td style="padding: 8px;">TBD</td>
+          <td style="padding: 8px;">31 March 2025</td>
         </tr>
         <tr>
           <td style="padding: 8px;">Training Data Release</td>
-          <td style="padding: 8px;">TBD</td>
+          <td style="padding: 8px;">1 September 2025</td>
         </tr>
         <tr>
           <td style="padding: 8px;">Evaluation Phase Begins</td>
-          <td style="padding: 8px;">TBD</td>
+          <td style="padding: 8px;">10 January 2026</td>
         </tr>
         <tr>
           <td style="padding: 8px;">Evaluation Phase Ends</td>
-          <td style="padding: 8px;">TBD</td>
+          <td style="padding: 8px;">31 January 2026</td>
         </tr>
         <tr>
           <td style="padding: 8px;">Leaderboard Announced</td>
-          <td style="padding: 8px;">TBD</td>
+          <td style="padding: 8px;">31 January 2026</td>
         </tr>
         <tr>
           <td style="padding: 8px;">System Paper Submission Due</td>
-          <td style="padding: 8px;">TBD</td>
+          <td style="padding: 8px;">February 2026</td>
+        </tr>
+        <tr>
+          <td style="padding: 8px;">Notification of Acceptance</td>
+          <td style="padding: 8px;">March 2026</td>
+        </tr>
+        <tr>
+          <td style="padding: 8px;">Camera-Ready Papers Due</td>
+          <td style="padding: 8px;">April 2026</td>
+        </tr>
+        <tr>
+          <td style="padding: 8px;">SemEval-2026 Workshop at [Conference Location TBD]</td>
+          <td style="padding: 8px;">Summer 2026</td>
         </tr>
       </tbody>
     </table>
