--- a/participation.html
+++ b/participation.html
@@ -40,11 +40,16 @@
 
     <h3>🗓️ Important Dates</h3>
     <ul>
-      <li>Training Data Release: TBD</li>
-      <li>Development Phase: TBD</li>
-      <li>Evaluation Phase: TBD</li>
-      <li>Result Submission Deadline: TBD</li>
-      <li>Paper Submission Deadline: TBD</li>
+      <li>31 March 2025: Call for Participation Opens / Task Proposals Due</li>
+      <li>8 August 2025: Trial Data Released</li>
+      <li>1 September 2025: Training Data Released</li>
+      <li>1 December 2025: Test Data Released (internal deadline; not for public release)/li>
+      <li>10 January 2026: System Submission Deadline / Evaluation Start</li>
+      <li>1 January 2026: Evaluation Results Released / Evaluation End</li>
+      <li>February 2026: System Paper Submission Deadline</li>
+      <li>March 2026: Notification of Acceptance</li>
+      <li>April 2026: Camera-Ready Papers Due</li>
+      <li>Summer 2026: SemEval-2026 Workshop at [Conference Location TBD]</li>
       <li>Workshop at SemEval 2026: TBD</li>
     </ul>
 
