--- a/tasks.html
+++ b/tasks.html
@@ -161,12 +161,17 @@
 
     <h3><i class="bi bi-calendar-week"></i> Timeline</h3>
     <ul>
-      <li>Task announcement: TBD</li>
-      <li>Data release: TBD</li>
-      <li>Evaluation phase begins: TBD</li>
-      <li>Submission deadline: TBD</li>
-      <li>Paper submissions to SemEval: TBD</li>
-      <li>SemEval Workshop at ACL: TBD</li>
+      <li>31 March 2025: Call for Participation Opens / Task Proposals Due</li>
+      <li>8 August 2025: Trial Data Released</li>
+      <li>1 September 2025: Training Data Released</li>
+      <li>1 December 2025: Test Data Released (internal deadline; not for public release)/li>
+      <li>10 January 2026: System Submission Deadline / Evaluation Start</li>
+      <li>1 January 2026: Evaluation Results Released / Evaluation End</li>
+      <li>February 2026: System Paper Submission Deadline</li>
+      <li>March 2026: Notification of Acceptance</li>
+      <li>April 2026: Camera-Ready Papers Due</li>
+      <li>Summer 2026: SemEval-2026 Workshop at [Conference Location TBD]</li>
+      <li>Workshop at SemEval 2026: TBD</li>
     </ul>
 
     <h3><i class="bi bi-people-fill"></i> Who Should Participate?</h3>
