added trial data link

--- a/news.html
+++ b/news.html
@@ -50,12 +50,15 @@
       </thead>
       <tbody>
         <tr>
-          <td style="padding: 8px;">Trial Data Release</td>
-          <td style="padding: 8px;">8 August 2025</td>
-        </tr>
-        <tr>
           <td style="padding: 8px;">Registration Opens</td>
           <td style="padding: 8px;">31 March 2025</td>
+        </tr>
+        <tr>
+          <td style="padding: 8px;">Trial Data Release 
+            <a href="https://github.com/Polar-SemEval/trial-data/">Click here </a>
+
+          </td>
+          <td style="padding: 8px;">8 August 2025</td>
         </tr>
         <tr>
           <td style="padding: 8px;">Training Data Release</td>
