--- a/tasks.html
+++ b/tasks.html
@@ -136,7 +136,7 @@
         <span style="background-color:#D6FFD6;">English, German, Spanish, Arabic, Urdu, Amharic, Hausa</span>
       </li>
       <li><b>New languages:</b>
-        <span style="background-color:#FFF8DC;">Turkish, Italian, Burmese, Chinese</span>
+        <span style="background-color:#FFF8DC;">Turkish, Italian, Burmese, Chinese, Hindi, Nepali, Russian, Telugu, Bengali, Persian</span>
       </li>
       <li><b>Possible extensions:</b>
         <span style="background-color:#CCFFFF;">Mozambican Portuguese, Kinyarwanda, Igbo, Twi, Swahili, isiXhosa, Zulu, Emakhuwa</span>
