--- a/dates.html
+++ b/dates.html
@@ -49,12 +49,20 @@
     <td>Test Data Released (internal deadline; not for public release)</td>
   </tr>
   <tr>
+    <td>1 January 2026</td>
+    <td>Evaluation Results Released</td>
+  </tr>
+  <tr>
     <td>10 January 2026</td>
     <td>System Submission Deadline / Evaluation Start</td>
   </tr>
   <tr>
     <td>31 January 2026</td>
     <td>Evaluation Results Released / Evaluation End</td>
+  </tr>
+  <tr>
+    <td>1 February 2026</td>
+    <td>Evaluation End</td>
   </tr>
   <tr>
     <td>February 2026</td>
