--- a/participation.html
+++ b/participation.html
@@ -43,9 +43,9 @@
       <li>31 March 2025: Call for Participation Opens / Task Proposals Due</li>
       <li>8 August 2025: Trial Data Released</li>
       <li>1 September 2025: Training Data Released</li>
-      <li>1 December 2025: Test Data Released (internal deadline; not for public release)/li>
-      <li>10 January 2026: System Submission Deadline / Evaluation Start</li>
+      <li>1 December 2025: Test Data Released (internal deadline; not for public release)</li>
       <li>1 January 2026: Evaluation Results Released / Evaluation End</li>
+      <li>10 January 2026: System Submission Deadline / Evaluation Start</li>
       <li>February 2026: System Paper Submission Deadline</li>
       <li>March 2026: Notification of Acceptance</li>
       <li>April 2026: Camera-Ready Papers Due</li>
