New Institutions added

--- a/index.html
+++ b/index.html
@@ -298,14 +298,22 @@
     <h2>Collaborating Institutions</h2>
     <ul>
         <li>Macquarie University (MU), Australia</li>
-  <li>University of Hamburg (UHH), Germany</li>
-  <li>Bahir Dar University (BDU), Ethiopia</li>
-  <li>Imperial College London (ICL), United Kingdom</li>
-  <li>University of Pretoria (UP), South Africa</li>
-  <li>Zayed University (ZU), United Arab Emirates</li>
-  <li>Bayero University Kano (BUK), Nigeria</li>
-  <li>Northeastern University (NU), United States</li>
-  <li>Bahir Dar University (BDU), Ethiopia</li>
+        <li>University of Hamburg (UHH), Germany</li>
+        <li>Bahir Dar University (BDU), Ethiopia</li>
+        <li>Imperial College London (ICL), United Kingdom</li>
+        <li>University of Pretoria (UP), South Africa</li>
+        <li>Zayed University (ZU), United Arab Emirates</li>
+        <li>Bayero University Kano (BUK), Nigeria</li>
+        <li>Northeastern University (NU), United States</li>
+        <li>Bahir Dar University (BDU), Ethiopia</li>
+        <li>University of Turin (UNITO), Italy</li>
+        <li>Heriot-Watt University (HWU), United Kingdom</li>
+        <li>Jagiellonian University (JU), Poland</li>
+        <li>Bielefeld University (BU), Germany</li>
+        <li>University of Tübingen (UT), Germany</li>
+        <li>Virginia Tech (VT), United States</li>
+        <li>Indian Institute of Technology Delhi (IITD), India</li>
+        <li>Mahindra University (MU), India</li>
     </ul>
     <p>If you or your organization are interested in collaborating or sponsoring, please get in touch with us.</p>
   </div>
