--- a/participation.html
+++ b/participation.html
@@ -92,7 +92,7 @@
 </div>
 
     <h3>💡 Questions?</h3>
-    <p>Join our GitHub Discussions, attend our webinars, or contact us at <a href="polarization-semeval-2026-organisers@googlegroups.com">polarization-semeval-2026-organisers@googlegroups.com</a></p>
+    <p>Join our GitHub Discussions, attend our webinars, or contact us at <a href="groups.google.com/g/polarization-semeval-2026-organisers">polarization-semeval-2026-organisers@googlegroups.com</a></p>
     <p>We look forward to your participation and insights!</p>
   </div>
 </section>
