--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           <p>Join the POLAR community and collaborate with fellow researchers and participants!</p>
         </div>
         <div class="text--center">
-          <a class="button button--secondary" href="connected.html" target="_blank">🔍 Read More</a>
+          <a class="button button--secondary" href="connected.html">🔍 Read More</a>
         </div>
       </div>
     </div>
@@ -286,7 +286,7 @@
 
     <h2>Contact Us</h2>
     <p>For any queries related to the task, dataset, or participation, feel free to write to us:</p>
-    <p><a href="polarization-semeval-2026-organisers@googlegroups.com" style="font-weight: bold;"> polarization-semeval-2026-organisers@googlegroups.com</a></p>
+    <p><a href="groups.google.com/g/polarization-semeval-2026-organisers" style="font-weight: bold;"> polarization-semeval-2026-organisers@googlegroups.com</a></p>
 
     <p>We also encourage you to follow updates and join discussions via:</p>
     <ul>
