Contact Channels Updated

--- a/about.html
+++ b/about.html
@@ -92,9 +92,9 @@
     <div style="margin-bottom: 2rem;">
       <h3>Where to Learn More</h3>
       <ul>
-        <li>🔗 <a href="#" target="_blank">Link to GitHub or official POLAR repo</a></li>
+        <li>🔗 <a href="https://github.com/Polar-SemEval/" target="_blank">Link to GitHub or official POLAR repo</a></li>
         <li>📄 <a href="#" target="_blank">Link to foundational paper or whitepaper</a></li>
-        <li>📣 <a href="#" target="_blank">Twitter / Mastodon / mailing list link</a></li>
+        <!-- <li>📣 <a href="#" target="_blank">Twitter / Mastodon / mailing list link</a></li> -->
       </ul>
     </div>
 
