--- a/announcement.html
+++ b/announcement.html
@@ -96,9 +96,9 @@
   <div class="announcement-section mb-5">
     <h4 class="section-heading">📥 Get Involved</h4>
     <ul>
-      <li>Join our mailing list (link coming soon)</li>
-      <li>Follow us on GitHub (link coming soon)</li>
-      <li>Join our Slack community (TBA)</li>
+      <!-- <li>Join our mailing list (link coming soon)</li> -->
+      <li>Follow us on GitHub 🔗 <a href="https://github.com/Polar-SemEval/" target="_blank"> </li>
+      <!-- <li>Join our Slack community (TBA)</li> -->
       <li>Email us: <a href="polarization-semeval-2026-organisers@googlegroups.com">polarization-semeval-2026-organisers@googlegroups.comm</a></li>
     </ul>
   </div>
