--- a/connected.html
+++ b/connected.html
@@ -30,9 +30,9 @@
     <ul>
       <li><strong>GitHub Discussions</strong><br>
           Ask questions, report issues, or suggest improvements.<br>
-          <a href="#" target="_blank" rel="noopener noreferrer">🔗 Visit our GitHub Repository</a>
+          <a href="https://github.com/Polar-SemEval" target="_blank" rel="noopener noreferrer">🔗 Visit our GitHub Repository</a>
       </li>
-      <li><strong>Slack (Coming Soon)</strong><br>
+      <li><strong>Discord (Coming Soon)</strong><br>
           We’ll launch a Slack workspace for real-time discussions and announcements. Stay tuned for the invite link!
       </li>
     </ul>
