--- a/getstarted.html
+++ b/getstarted.html
@@ -154,8 +154,8 @@
     <h3>📬 Contact and Community</h3>
     <ul>
       <li>Email: polarization-semeval-2026-organisers@googlegroups.com</li>
-      <li>Slack Channel: Link TBA</li>
-      <li>GitHub: Link TBA</li>
+      <li>Discord Channel: Link TBA</li>
+      <li>GitHub: <a href="https://github.com/Polar-SemEval" target="_blank" rel="noopener noreferrer"></a></li>
     </ul>
   </main>
 
