--- a/news.html
+++ b/news.html
@@ -105,7 +105,7 @@
     <h3>💬 Community Channels</h3>
     <ul>
       <li><strong>GitHub Discussions:</strong> Share ideas, ask questions, report issues</li>
-      <li><strong>Slack (coming soon):</strong> Live chat with organizers and participants</li>
+      <li><strong>Discord (coming soon):</strong> Live chat with organizers and participants</li>
       <li><strong>Q&A Webinars:</strong> TBD </li>
     </ul>
 
