--- a/tasks.html
+++ b/tasks.html
@@ -200,7 +200,7 @@
     <h3><i class="bi bi-envelope-at"></i> Contact and Community</h3>
     <p>For questions or to join the community, reach out via email at 
       <a href="mailto:polarization-semeval-2026-organisers@googlegroups.com">polarization-semeval-2026-organisers@googlegroups.com</a>.
-      Stay connected through the Slack channel, mailing list, and GitHub repository (links to be announced soon).</p>
+      Stay connected through the Discord channel, mailing list, and GitHub repository (links to be announced soon).</p>
   </div>
 </section>
 
