--- a/about.html
+++ b/about.html
@@ -18,12 +18,12 @@
 
 
 <section class="about-polar-section">
-  <div class="container" style="margin-top: 2rem; max-width: 960px;">
+  <div class="container-fluid py-5 my-4 p-5" >
 
     <!-- Page Title -->
     <div class="text--center" style="margin-bottom: 2rem;">
-      <div style="font-size: 3rem;">🧭</div>
-      <h1>About POLAR</h1>
+      <div style="font-size: 3rem;"></div>
+      <h1>🧭 About POLAR</h1>
       <h2 style="font-weight: normal; font-size: 1.25rem; margin-top: 0.5rem;">
         Polarization Analysis for Language Across Regions<br>
         <em>A Global Research Initiative in Multilingual & Multicultural NLP</em>
