--- a/announcement.html
+++ b/announcement.html
@@ -16,8 +16,10 @@
     <a class="nav-link" href="participation.html">Participation</a>
   </nav>
 
-<section class="task-announcement container py-5">
-  <div class="announcement-header text-center mb-4">
+<section class="task-announcement container-fluid py-5 my-4 p-5">
+
+  <div class="announcement-header text-center container-fluid px-5">
+ 
     <h2>📢 Task Announcement</h2>
     <h3 class="task-title">SemEval 2026 Shared Task</h3>
     <p class="lead">Detecting Multilingual, Multicultural, and Multievent Online Polarization</p>
