--- a/connected.html
+++ b/connected.html
@@ -16,9 +16,9 @@
     <a class="nav-link" href="participation.html">Participation</a>
   </nav>
 
-<section class="stay-connected" style="margin-top: 2rem;">
-  <div class="container">
-    <h2>🌐 Stay Connected</h2>
+<section class="stay-connected container-fluid my-5 px-5">
+  <div class="container-fluid px-5">
+    <h1>🌐 Stay Connected</h1>
     <p>We’d love to hear from you! Whether you're a participant, researcher, or enthusiast, there are multiple ways to stay in the loop and engage with the POLAR shared task.</p>
 
     <h3>📧 Mailing List</h3>
