--- a/dates.html
+++ b/dates.html
@@ -17,7 +17,7 @@
   </nav>
 
 
-<section class="important-dates container py-5">
+<section class="important-dates container my-5 py-5">
   <div class="dates-header text-center mb-4">
     <h2>📅 Important Dates – SemEval-2026</h2>
     <p class="text-muted">Keep track of the key milestones for your participation in the Polar task.<br>All deadlines are <strong>11:59 PM AoE (Anywhere on Earth)</strong>.</p>
