--- a/getstarted.html
+++ b/getstarted.html
@@ -16,7 +16,7 @@
     <a class="nav-link" href="participation.html">Participation</a>
   </nav>
 
-  <main class="container py-5">
+<main class="container-fluid my-5 px-5">
     <h2>🧠 Task Overview</h2>
     <p>
       Polarization refers to the division of opinions into two sharply contrasting groups, especially when marked by hostility, intolerance, or exclusion.
