--- a/goal.html
+++ b/goal.html
@@ -17,8 +17,8 @@
   </nav>
 
 
-<section class="goal-section container py-5">
-  <div class="text-center mb-4">
+<section class="goal-section container-fluid my-5 px-5">
+  <div class="text-center mb-4 px-5">
     <h2 class="section-title text-bold">🎯 Goal of the Task</h2>
     <h5 class="subtitle text-muted">SemEval 2026 Shared Task<br>Detecting Multilingual, Multicultural, and Multievent Online Polarization</h5>
   </div>
