--- a/participation.html
+++ b/participation.html
@@ -16,8 +16,9 @@
     <a class="nav-link active" href="participation.html">Participation</a>
   </nav>
 
-<section class="participation" style="margin-top: 2rem;">
-  <div class="container">
+<section class="participation container-fluid p-5">
+  <div class="container-fluid p-5">
+
     <h2>🚀 Participation</h2>
     <p>SemEval 2026 Shared Task
     </p>
