--- a/documentation.html
+++ b/documentation.html
@@ -17,13 +17,13 @@
   </nav>
 
 
-<section class="task-documentation-section">
-  <div class="container" style="margin-top: 2rem; max-width: 960px;">
+<section class="task-documentation-section my-5 px-5">
+  <div class="container-fluid my-5 px-5"></div>
 
     <!-- Page Title -->
     <div class="text--center" style="margin-bottom: 2rem;">
-      <div style="font-size: 3rem;">📚</div>
-      <h1>Task Documentation</h1>
+      <div style="font-size: 3rem;"></div>
+      <h1>📚 Task Documentation</h1>
       <h2 style="font-weight: normal; font-size: 1.25rem; margin-top: 0.5rem;">
         SemEval-2026 Shared Task<br>
         <em>Attitude Polarization Detection in Multilingual News Commentary (POLAR)</em>
