--- a/news.html
+++ b/news.html
@@ -16,8 +16,8 @@
     <a class="nav-link" href="participation.html">Participation</a>
   </nav>
 
-<section class="news-updates-section">
-  <div class="container" style="margin-top: 2rem;">
+<section class="news-updates-section container-fluid my-5 px-5">
+  <div class="container-fluid px-5">
 
     <h2>📰 News and Updates</h2>
     <p>
