--- a/tasks.html
+++ b/tasks.html
@@ -111,16 +111,27 @@
 </head>
 <body>
 
-<!-- NAVIGATION -->
-<nav class="nav nav-tabs justify-content-center shadow-sm bg-white sticky-top">
-  <a class="nav-link" href="index.html"><i class="bi bi-info-circle"></i> About</a>
-  <a class="nav-link active" href="tasks.html"><i class="bi bi-list-check"></i> Tasks</a>
-  <a class="nav-link" href="participation.html"><i class="bi bi-door-open"></i> Participation</a>
-</nav>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Important Dates | POLAR @ 2026</title>
 
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
+  <link rel="stylesheet" href="assets/style.css"/>
+</head>
+<body>
+
+  <nav class="nav nav-tabs justify-content-center shadow-sm bg-white sticky-top">
+    <a class="nav-link" href="index.html#about">About</a>
+    <a class="nav-link active" href="tasks.html">Tasks</a>
+    <a class="nav-link" href="participation.html">Participation</a>
+  </nav>
 <!-- MAIN CONTENT -->
-<section class="the-task">
-  <div class="container">
+<section class="the-task container-fluid my-5 px-5">
+  <div class="container-fluid px-5">
+
     <h2 class="mb-4 text-center"><i class="bi bi-lightning-charge-fill text-warning"></i> The Task</h2>
 
     <p>Polarization refers to the division of opinions into two sharply contrasting groups, often accompanied by hostility, intolerance, or exclusion. In today's digital era, polarization is intensifying across platforms and geographies, influencing public discourse, exacerbating conflicts, and contributing to societal fragmentation.</p>
