--- a/index.html
+++ b/index.html
@@ -14,12 +14,11 @@
     <div class="overlay">
       <div class="container text-center  hero-text">
         <h1 class="display-6 fw-bold" style="color: #542b76;">
-  Polar@SemEval-2026  <br>Task 9: Detecting Multilingual, Multicultural and Multievent Online Polarization
-</h1>
-<p class="lead" style="color: #724d9d;">
-  Attitude Polarization Detection in Multilingual, Multicultural and Multievent Contexts
-</p>
-
+            Polar@SemEval-2026  <br>Task 9: Detecting Multilingual, Multicultural and Multievent Online Polarization
+        </h1>
+        <p class="lead" style="color: #724d9d;">
+          Attitude Polarization Detection in Multilingual, Multicultural and Multievent Contexts
+        </p>
       </div>
     </div>
   </header>
@@ -28,7 +27,7 @@
     <a class="nav-link active" href="#about">About</a>
     <a class="nav-link" href="tasks.html">Tasks</a>
     <a class="nav-link" href="participation.html">Participation</a>
-
+    <a class="nav-link" href="indexUpdated.html">New Page</a>
   </nav>
 
   <div class="container-fluid px-5 my-5">
