--- a/participation.html
+++ b/participation.html
@@ -10,6 +10,32 @@
 </head>
 <body>
 
+      <!-- Navbar Starts -->
+      <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top" style="background-color: #e3f2fd;" data-bs-theme="light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">POLAR</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+              <li class="nav-item"><a class="nav-link" href="news.html">News</a></li>
+              <li class="nav-item"><a class="nav-link active" href="participation.html">Participation</a></li>
+              <li class="nav-item"><a class="nav-link" href="documentation.html">Documentaion</a></li>
+              <li class="nav-item"><a class="nav-link" href="organisers.html">Organizers</a></li>
+              <li class="nav-item"><a class="nav-link" href="#">Terms</a></li>
+              <li class="nav-item"><a class="nav-link" href="#">Results</a></li>
+              <li class="nav-item"><a class="nav-link" href="#">Awards</a></li>
+            </ul>
+            <form class="d-flex" role="search">
+              <input class="form-control me-2" type="search" placeholder="Type something..." aria-label="Search"/>
+              <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+          </div>
+        </div>
+      </nav>
+      <!-- Navbar Ends -->
   <nav class="nav nav-tabs justify-content-center shadow-sm bg-white sticky-top">
     <a class="nav-link" href="index.html#about">About</a>
     <a class="nav-link" href="tasks.html">Tasks</a>
