New Homepage with modifications

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <a class="nav-link active" href="#about">About</a>
     <a class="nav-link" href="tasks.html">Tasks</a>
     <a class="nav-link" href="participation.html">Participation</a>
-    <a class="nav-link" href="indexUpdated.html">New Page</a>
+    <a class="nav-link" href="indexUpdated.html">New</a>
   </nav>
 
   <div class="container-fluid px-5 my-5">
