updating my prof pic

--- a/organisers.html
+++ b/organisers.html
@@ -131,7 +131,7 @@
  </div>
  <div class="col">
    <div class="card organizer-card shadow-sm border-0">
-     <img src="assets/images/idris.png" class="card-img-top organizer-img" alt="Idris Abdulmumin">
+     <img src="assets/images/idris.JPG" class="card-img-top organizer-img" alt="Idris Abdulmumin">
      <div class="card-body p-2 text-center">
        <h6 class="card-title mb-1 fw-semibold">Dr. Idris Abdulmumin</h6>
        <p class="card-text mb-0 organizer-text">University of Pretoria (South Africa)</p>
