--- a/indexUpdated.html
+++ b/indexUpdated.html
@@ -37,7 +37,20 @@
   </style>
 </head>
 <body data-bs-spy="scroll" data-bs-target="#sidebarMenu" data-bs-offset="60" tabindex="0">
-
+  <!--Header Start-->
+  <header class="hero-section">
+    <div class="overlay">
+      <div class="container text-center  hero-text">
+        <h1 class="display-6 fw-bold" style="color: #542b76;">
+            Polar@SemEval-2026  <br>Task 9: Detecting Multilingual, Multicultural and Multievent Online Polarization
+        </h1>
+        <p class="lead" style="color: #724d9d;">
+          Attitude Polarization Detection in Multilingual, Multicultural and Multievent Contexts
+        </p>
+      </div>
+    </div>
+  </header>
+  <!--Header Finish-->
   <!-- Navbar Starts -->
   <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top" style="background-color: #e3f2fd;" data-bs-theme="light">
     <div class="container-fluid">
