--- a/indexOld.html
+++ b/indexOld.html
@@ -24,13 +24,10 @@
   </header>
 
   <nav class="nav nav-tabs justify-content-center shadow-sm bg-white sticky-top">
-    <a class="nav-link active" href="#Motivation">Motivation</a>
-    <a class="nav-link active" href="#Languages">Languages</a>
-    <a class="nav-link" href="#Tasks">Tasks</a>
-    <a class="nav-link" href="#Participation">How to Participate</a>
-    <a class="nav-link" href="#Dates">Dates</a>
-    <a class="nav-link" href="#Organizers">Organizers</a>
-    <a class="nav-link" href="#Others">Others</a>
+    <a class="nav-link active" href="#about">About</a>
+    <a class="nav-link" href="tasks.html">Tasks</a>
+    <a class="nav-link" href="participation.html">Participation</a>
+    <a class="nav-link" href="indexUpdated.html">New</a>
   </nav>
 
   <div class="container-fluid px-5 my-5">
