--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <nav class="nav nav-tabs justify-content-center shadow-sm bg-white sticky-top">
     <a class="nav-link active" href="#Motivation">Motivation</a>
-    <a class="nav-link active" href="#Languages">Languages</a>
+    <a class="nav-link" href="#Languages">Languages</a>
     <a class="nav-link" href="#Tasks">Tasks</a>
     <a class="nav-link" href="#Participation">How to Participate</a>
     <a class="nav-link" href="#Dates">Dates</a>
