--- a/index.html
+++ b/index.html
@@ -35,66 +35,23 @@
 
   <div class="container-fluid px-5 my-5">
 
-
-
-
-<section class="cta-section container mb-5">
-  <div class="row justify-content-center g-4">
-    <div class="col-md-4">
-      <a href="announcement.html" class="card text-center text-decoration-none shadow-sm">
-        <div class="card-body">
-          <h3 class="card-title text-primary">📢 Task Announcement</h3>
-        </div>
-      </a>
-    </div>
-    <div class="col-md-4">
-      <a href="getstarted.html" class="card text-center text-decoration-none shadow-sm">
-        <div class="card-body">
-          <h3 class="card-title text-success">🚀 Get Started</h3>
-        </div>
-      </a>
-    </div>
-    <div class="col-md-4">
-      <a href="dates.html" class="card text-center text-decoration-none shadow-sm">
-        <div class="card-body">
-          <h3 class="card-title text-white">📅 Important Dates</h3>
-        </div>
-      </a>
-    </div>
-  </div>
-</section>
-
 <section class="polar-info-section">
   <div class="container" style="margin-top: -2rem">
 
-    <!-- Row 1: Goal + About POLAR -->
+    <!-- Row 1: Motivation -->
     <div class="row">
-      <div class="col col--6" style="margin: 2rem 0rem">
-
+      <!--col 1: Motivation -->
+      <div class="col col--12" style="margin: 2rem 0rem">
+        <div class="text--center" style="font-size: 2.5rem; margin-bottom: 0.5rem">💡</div>
+        <div class="text--center padding-horiz--md">
+          <h3>Motivation</h3>
+          <p>Read the task description, download the data, and learn how to submit your results!</p>
+        </div>
+        <!-- <div class="text--center">
+          <a class="button button--secondary" href="#">🔍 Read More</a>
+        </div> -->
       </div>
 
-      <div class="col col--6" style="margin: 2rem 0rem">
-        
-      </div>
-    </div>
-
-    <!-- Row 2: Docs, News, Connect -->
-    <div class="row">
-      <div class="col col--4" style="margin: 2rem 0rem">
-        <div class="text--center" style="font-size: 2.5rem; margin-bottom: 0.5rem">📄</div>
-
-      </div>
-
-      <div class="col col--4" style="margin: 2rem 0rem">
-        <div class="text--center" style="font-size: 2.5rem; margin-bottom: 0.5rem">📰</div>
-
-      </div>
-
-      <div class="col col--4" style="margin: 2rem 0rem">
-        <div class="text--center" style="font-size: 2.5rem; margin-bottom: 0.5rem">🤝</div>
-
-
-      </div>
     </div>
 
   </div>
