--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <div class="col col--12" style="margin: 2rem 0rem">
         <div class="text--center" style="font-size: 2.5rem; margin-bottom: 0.5rem">💡</div>
         <div class="text--center padding-horiz--md">
-          <h3>Motivation</h3>
+          <h3>💡 Motivation</h3>
           <p>Read the task description, download the data, and learn how to submit your results!</p>
         </div>
         <!-- <div class="text--center">
