--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="row">
 
       <!--col 1: Motivation Start -->
-      <div id="Motivation"class="col col--12" style="margin: 2rem 0rem">
+      <div id="Motivation"class="col col-12" style="margin: 2rem 0rem">
         <!-- <div class="text--center" style="font-size: 2.5rem; margin-bottom: 0.5rem">💡</div> -->
         <div class="text--center padding-horiz--md">
           <h3>💡 Motivation</h3>
@@ -54,7 +54,7 @@
       </div>
     <!-- Col 1: Motivation End -->
     <!-- Col 2: Languages Start -->
-      <div id="Languages" class="col col--12" style="margin: 2rem 0rem">
+      <div id="Languages" class="col col-12" style="margin: 2rem 0rem">
         <!-- <div class="text--center" style="font-size: 2.5rem; margin-bottom: 0.5rem">🌐</div> -->
         <div class="text--center padding-horiz--md">
           <h3>🌐 Languages</h3>
@@ -63,7 +63,7 @@
       </div>
     <!-- Col 2: Languages End -->
     <!-- Col 3: Tasks Start -->
-      <div id="Tasks" class="col col--12" style="margin: 2rem 0rem">
+      <div id="Tasks" class="col col-12" style="margin: 2rem 0rem">
         <!-- <div class="text--center" style="font-size: 2.5rem; margin-bottom: 0.5rem">📝</div> -->
         <div class="text--center padding-horiz--md">
           <h3>📝 Subtasks</h3>
@@ -217,8 +217,13 @@
       </div>
       <!-- Col 3: Tasks End -->
       <!-- Col 4: Data Links Start -->
-      <h3>💡 Dataset and Download Links</h3>
-      <p><strong>Trial Dataset: https://github.com/Polar-SemEval/trial-data</strong></p>
+      <div id="Links"class="col col-12" style="margin: 2rem 0rem">
+        <!-- <div class="text--center" style="font-size: 2.5rem; margin-bottom: 0.5rem">💡</div> -->
+        <div class="text--center padding-horiz--md">
+          <h3>💡 Dataset and Download Links</h3>
+          <p><strong>Trial Dataset: https://github.com/Polar-SemEval/trial-data</strong></p>
+        </div>
+      </div>
       <!--Col 4: Data Links End-->
 
       <!-- Col 5: How to Participate Start -->
