--- a/index.html
+++ b/index.html
@@ -7,6 +7,40 @@
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="assets/style.css" />
+  <style>
+    /* Custom Table Styling - Matches your site theme */
+.custom-table {
+  width: 100%;
+  border-collapse: separate;
+  border-spacing: 0;
+  border-radius: 12px;
+  overflow: hidden;
+  box-shadow: 0 4px 16px rgba(0,0,0,0.05);
+  font-family: 'Segoe UI', sans-serif;
+}
+
+.custom-table thead {
+  background: linear-gradient(135deg, #fbc2eb, #a6c1ee);
+  color: #fff;
+  text-align: left;
+}
+
+.custom-table th, .custom-table td {
+  padding: 12px 16px;
+  font-size: 0.95rem;
+  border-bottom: 1px solid #e5e7eb;
+  vertical-align: middle;
+}
+
+.custom-table tbody tr:nth-child(even) {
+  background-color: #f9f5ff;
+}
+
+.custom-table tbody tr:hover {
+  background-color: #f1f0ff;
+  transition: 0.2s;
+}
+  </style>
 </head>
 <body>
 
@@ -68,7 +102,7 @@
         <div class="text--center padding-horiz--md">
           <h3>📝 Subtasks</h3>
           <p>
-            Participants may choose to compete in one or more of the three subtasks. A few sample instances are provided here for review, and additional trial data can be found at: <strong><a href="https://github.com/Polar-SemEval/trial-data">Trail Data</a></strong>
+            Participants may choose to compete in one or more of the three subtasks. A few sample instances are provided here for review, and additional trial data can be found at: <strong><a href="https://github.com/Polar-SemEval/trial-data">Trial Data</a></strong>
             <br>
             <strong>Subtask 1:</strong> Polarization Detection – Binary classification to determine whether a post contains polarized content (Polarized or Not Polarized).
           </p>
