--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <strong>Subtask 1:</strong> Polarization Detection – Binary classification to determine whether a post contains polarized content (Polarized or Not Polarized).
           </p>
             <!--Table 1 Start-->
-            <table border="1" cellpadding="8" cellspacing="0" style="border-collapse: collapse; width: 100%; text-align: left;">
+            <table border="1">
               <thead>
                 <tr style="background-color: #f2f2f2;">
                   <th>Text</th>
