--- a/index.html
+++ b/index.html
@@ -7,40 +7,7 @@
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="assets/style.css" />
-  <style>
-    /* Custom Table Styling - Matches your site theme */
-.custom-table {
-  width: 100%;
-  border-collapse: separate;
-  border-spacing: 0;
-  border-radius: 12px;
-  overflow: hidden;
-  box-shadow: 0 4px 16px rgba(0,0,0,0.05);
-  font-family: 'Segoe UI', sans-serif;
-}
 
-.custom-table thead {
-  background: linear-gradient(135deg, #fbc2eb, #a6c1ee);
-  color: #fff;
-  text-align: left;
-}
-
-.custom-table th, .custom-table td {
-  padding: 12px 16px;
-  font-size: 0.95rem;
-  border-bottom: 1px solid #e5e7eb;
-  vertical-align: middle;
-}
-
-.custom-table tbody tr:nth-child(even) {
-  background-color: #f9f5ff;
-}
-
-.custom-table tbody tr:hover {
-  background-color: #f1f0ff;
-  transition: 0.2s;
-}
-  </style>
 </head>
 <body>
 
@@ -64,7 +31,7 @@
     <a class="nav-link" href="#Links">Data Links</a>
     <a class="nav-link" href="#Participation">How to Participate</a>
     <a class="nav-link" href="#Dates">Dates</a>
-    <a class="nav-link" href="#Communication">#Communication</a>
+    <a class="nav-link" href="#Communication">Communication</a>
     <a class="nav-link" href="#FAQ">FAQs</a>
     <a class="nav-link" href="#Resources">Resources</a>
     <a class="nav-link" href="#Organizers">Organizers</a>
@@ -107,7 +74,7 @@
             <strong>Subtask 1:</strong> Polarization Detection – Binary classification to determine whether a post contains polarized content (Polarized or Not Polarized).
           </p>
             <!--Table 1 Start-->
-            <table border="1">
+            <table border="1" cellpadding="8" cellspacing="0" style="border-collapse: collapse; width: 100%; text-align: left;">
               <thead>
                 <tr style="background-color: #f2f2f2;">
                   <th>Text</th>
