--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
               <strong>Subtask 2:</strong> Polarization Type Classification – Identify the target of polarization as one of the following categories: Gender/Sexual, Political, Religious, Racial/Ethnic, or Other.
             </p>
             <!--Table 2 Start-->
-            <table border="1" cellpadding="8" cellspacing="0" style="border-collapse: collapse; width: 100%; text-align: left;">
+            <table class="table">
               <thead>
                 <tr style="background-color: #f2f2f2;">
                   <th>Text</th>
