--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
               <strong>Subtask 2:</strong> Polarization Type Classification – Identify the target of polarization as one of the following categories: Gender/Sexual, Political, Religious, Racial/Ethnic, or Other.
             </p>
             <!--Table 2 Start-->
-            <table class="table">
+            <table class="table table-striped table-hover">
               <thead>
                 <tr style="background-color: #f2f2f2;">
                   <th>Text</th>
