--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
               </thead>
               <tbody>
                 <tr>
-                  <td>Find yourself a west bank settler gf</td>
+                  <td class="text-start">Find yourself a west bank settler gf</td>
                   <td>en</td>
                   <td>1</td>
                   <td>1</td>
@@ -144,7 +144,7 @@
                   <td>0</td>
                 </tr>
                 <tr>
-                  <td>Fascist oligarchs now control the USA</td>
+                  <td class="text-start">Fascist oligarchs now control the USA</td>
                   <td>en</td>
                   <td>0</td>
                   <td>1</td>
@@ -153,7 +153,7 @@
                   <td>0</td>
                 </tr>
                 <tr>
-                  <td>Someone end this lunatic before he starts ethnic cleansing</td>
+                  <tdclass="text-start">Someone end this lunatic before he starts ethnic cleansing</td>
                   <td>en</td>
                   <td>0</td>
                   <td>1</td>
