--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
             <strong>Subtask 1:</strong> Polarization Detection – Binary classification to determine whether a post contains polarized content (Polarized or Not Polarized).
           </p>
             <!--Table 1 Start-->
-            <table border="1" cellpadding="8" cellspacing="0" style="border-collapse: collapse; width: 100%; text-align: left;">
+            <table  class="table table-striped table-hover">
+            <!-- <table border="1" cellpadding="8" cellspacing="0" style="border-collapse: collapse; width: 100%; text-align: left;"> -->
               <thead>
                 <tr style="background-color: #f2f2f2;">
                   <th>Text</th>
@@ -84,32 +85,32 @@
               </thead>
               <tbody>
                 <tr>
-                  <td>Find yourself a west bank settler gf</td>
+                  <td class="text-start">Find yourself a west bank settler gf</td>
                   <td>en</td>
                   <td>TRUE</td>
                 </tr>
                 <tr>
-                  <td>Fascist oligarchs now control the USA</td>
+                  <td class="text-start">Fascist oligarchs now control the USA</td>
                   <td>en</td>
                   <td>TRUE</td>
                 </tr>
                 <tr>
-                  <td>Someone end this lunatic before he starts ethnic cleansing</td>
+                  <td class="text-start">Someone end this lunatic before he starts ethnic cleansing</td>
                   <td>en</td>
                   <td>TRUE</td>
                 </tr>
                 <tr>
-                  <td>The EU is increasing military aid to Ukraine to one billion euros the press release on the website of the Council of Europe.</td>
+                  <td class="text-start">The EU is increasing military aid to Ukraine to one billion euros the press release on the website of the Council of Europe.</td>
                   <td>en</td>
                   <td>FALSE</td>
                 </tr>
                 <tr>
-                  <td>House drafts bill to strike Iran proxies amid IsraelHamas</td>
+                  <td class="text-start">House drafts bill to strike Iran proxies amid IsraelHamas</td>
                   <td>en</td>
                   <td>FALSE</td>
                 </tr>
                 <tr>
-                  <td>Contested races across county early voting</td>
+                  <td class="text-start">Contested races across county early voting</td>
                   <td>en</td>
                   <td>FALSE</td>
                 </tr>
@@ -153,7 +154,7 @@
                   <td>0</td>
                 </tr>
                 <tr>
-                  <tdclass="text-start">Someone end this lunatic before he starts ethnic cleansing</td>
+                  <td class="text-start">Someone end this lunatic before he starts ethnic cleansing</td>
                   <td>en</td>
                   <td>0</td>
                   <td>1</td>
@@ -169,7 +170,7 @@
               <strong>Subtask 3:</strong> Manifestation Identification – Classify how polarization is expressed, with multiple possible labels including Vilification, Extreme Language, Stereotype, Invalidation, Lack of Empathy, and Dehumanization.Polarization Type Classification – Identify the target of polarization as one of the following categories: Gender/Sexual, Political, Religious, Racial/Ethnic, or Other.
             </p>
             <!--Table 3 Start-->
-            <table border="1" cellpadding="8" cellspacing="0" style="border-collapse: collapse; width: 100%; text-align: left;">
+            <table class="table table-striped table-hover">
               <thead>
                 <tr style="background-color: #f2f2f2;">
                   <th>Text</th>
@@ -184,7 +185,7 @@
               </thead>
               <tbody>
                 <tr>
-                  <td>Find yourself a west bank settler gf</td>
+                  <td class="text-start">Find yourself a west bank settler gf</td>
                   <td>en</td>
                   <td>1</td>
                   <td>0</td>
@@ -194,7 +195,7 @@
                   <td>0</td>
                 </tr>
                 <tr>
-                  <td>Fascist oligarchs now control the USA</td>
+                  <td class="text-start">Fascist oligarchs now control the USA</td>
                   <td>en</td>
                   <td>1</td>
                   <td>1</td>
@@ -204,7 +205,7 @@
                   <td>0</td>
                 </tr>
                 <tr>
-                  <td>Someone end this lunatic before he starts ethnic cleansing</td>
+                  <td class="text-start">Someone end this lunatic before he starts ethnic cleansing</td>
                   <td>en</td>
                   <td>1</td>
                   <td>1</td>
