--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
         <!-- <div class="text--center" style="font-size: 2.5rem; margin-bottom: 0.5rem">💡</div> -->
         <div class="text--center padding-horiz--md">
           <h3>💡 Dataset and Download Links</h3>
-          <p><strong>Trial Dataset: https://github.com/Polar-SemEval/trial-data</strong></p>
+          <p><strong>Trial Dataset: <strong><a href="https://github.com/Polar-SemEval/trial-data"></a></strong></strong></p>
         </div>
       </div>
       <!--Col 4: Data Links End-->
