--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="text--center padding-horiz--md">
           <h3>📝 Subtasks</h3>
           <p>
-            Participants may choose to compete in one or more of the three subtasks. A few sample instances are provided here for review, and additional trial data can be found at: <strong><a href="https://github.com/Polar-SemEval/trial-data">Trial Data</a></strong>
+            Participants may choose to compete in one or more of the three subtasks. A few sample instances are provided here for review, and additional trial data can be found at: <strong><a href="https://github.com/Polar-SemEval/trial-data" target="_blank">Trial Data</a></strong>
             <br>
             <strong>Subtask 1:</strong> Polarization Detection – Binary classification to determine whether a post contains polarized content (Polarized or Not Polarized).
           </p>
@@ -225,7 +225,7 @@
         <!-- <div class="text--center" style="font-size: 2.5rem; margin-bottom: 0.5rem">💡</div> -->
         <div class="text--center padding-horiz--md">
           <h3>💡 Dataset and Download Links</h3>
-          <p><strong>Trial Dataset: <strong><a href="https://github.com/Polar-SemEval/trial-data"></a></strong></strong></p>
+          <p><strong>Trial Dataset:</strong> <a href="https://github.com/Polar-SemEval/trial-data" target="_blank"></a</p>
         </div>
       </div>
       <!--Col 4: Data Links End-->
