--- a/index.html
+++ b/index.html
@@ -70,13 +70,12 @@
     </div>
   </header>
 
-  <nav class="nav nav-tabs justify-content-center shadow-sm bg-white sticky-top">
+  <nav class="nav nav-tabs justify-content-center shadow-sm bg-white sticky-top flex-wrap">
     <a class="nav-link active" href="#Motivation">Motivation</a>
     <a class="nav-link" href="#Languages">Languages</a>
     <a class="nav-link" href="#Tasks">Subtasks</a>
     <a class="nav-link" href="#Links">Data Links</a>
     <a class="nav-link" href="#Participation">How to Participate</a>
-    <br>
     <a class="nav-link" href="#Dates">Dates</a>
     <a class="nav-link" href="#Communication">Communication</a>
     <a class="nav-link" href="#FAQ">FAQs</a>
