--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   </header>
 
   <nav class="nav nav-tabs justify-content-center shadow-sm bg-white sticky-top flex-wrap">
-    <a class="nav-link active" href="#Motivation">Motivation</a>
+    <a class="nav-link active" href="#">Motivation</a>
     <a class="nav-link" href="#Languages">Languages</a>
     <a class="nav-link" href="#Tasks">Subtasks</a>
     <a class="nav-link" href="#Links">Data Links</a>
