--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   </header>
 
   <nav class="nav nav-tabs justify-content-center shadow-sm bg-white sticky-top flex-wrap">
-    <a class="nav-link active" href="#">Motivation</a>
+    <a class="nav-link active" href="#Motivation">Motivation</a>
     <a class="nav-link" href="#Languages">Languages</a>
     <a class="nav-link" href="#Tasks">Subtasks</a>
     <a class="nav-link" href="#Links">Data Links</a>
@@ -95,7 +95,7 @@
     <div class="row">
 
       <!--col 1: Motivation Start -->
-      <div id="Motivation"class="col col-12" style="margin: 2rem 0rem">
+      <div id=""class="col col-12" style="margin: 2rem 0rem">
         <!-- <div class="text--center" style="font-size: 2.5rem; margin-bottom: 0.5rem">💡</div> -->
         <div class="text--center padding-horiz--md">
           <h3>💡 Motivation</h3>
