--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
 </head>
 <body>
 
-  <!-- Back to Top Button -->
-<button id="backToTop" title="Go to top">⬆️</button>
+
 
   <header class="hero-section">
     <div class="overlay">
@@ -74,7 +73,7 @@
   </header>
 
   <nav class="nav nav-tabs justify-content-center shadow-sm bg-white sticky-top flex-wrap">
-    <a class="nav-link active" href="#Motivation">Motivation</a>
+    <a class="nav-link active" href="#">Motivation</a>
     <a class="nav-link" href="#Languages">Languages</a>
     <a class="nav-link" href="#Tasks">Subtasks</a>
     <a class="nav-link" href="#Links">Data Links</a>
@@ -95,7 +94,7 @@
     <div class="row">
 
       <!--col 1: Motivation Start -->
-      <div id=""class="col col-12" style="margin: 2rem 0rem">
+      <div id="Motivation"class="col col-12" style="margin: 2rem 0rem">
         <!-- <div class="text--center" style="font-size: 2.5rem; margin-bottom: 0.5rem">💡</div> -->
         <div class="text--center padding-horiz--md">
           <h3>💡 Motivation</h3>
@@ -349,5 +348,7 @@
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Back to Top Button -->
+<button id="backToTop" title="Go to top">⬆️</button>
 </body>
 </html>
