--- a/index.html
+++ b/index.html
@@ -279,48 +279,235 @@
       <!--Col 4: Data Links End-->
       <!-- Col 5: How to Participate Start -->
       <div id="Links"class="col col-12" style="margin: 2rem 0rem">
+        <h3>💡 How to Participate</h3>
+        <p>
+          <strong>Register:</strong> Sign up on the CodaBench competition platform.
+          <strong>Tasks:</strong> Decide on the task(s) you want to participate in (Subtask 1, 2 and/or 3).
+          <strong>Download: </strong>Access to the datasets for each task will be provided in this repository.
+          <strong>Develop: </strong>Build your models using the provided data.
+          <strong>Submit:</strong> Submit your predictions on the CodaBench competition platform.
+        </p>
+        <h3>💡 Evaluation</h3>
+        <p>
+          <ul>
+            <li>Subtask 1: Macro F1</li>
+            <li>Subtask 2: Macro F1</li>
+            <li>Subtask 3: Macro F1</li>
+          </ul>
+        </p>
+        <h3>💡 Competition Rules and Terms </h3>
       <div class="accordion" id="accordionExample">
-        <!-- About Us -->
+        <!-- 1 -->
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingOne">
             <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-              About Us
+              1. Consent to Public Release of Scores
             </button>
           </h2>
           <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
             <div class="accordion-body">
-              We are a student-led initiative focused on bringing together innovative ideas
-              and collaborative projects to improve the community.
+              <ul>
+                <li>By submitting results, you consent to the public release of your scores on:
+                  <ul>
+                    <li>the competition website</li>
+                    <li>at the designated workshop</li>
+                    <li>in associated proceedings</li>
+                  </ul>
+                </li>
+                <li>Task organizers have discretion over the release and choice of metrics.</li>
+                <li>Scores may include:
+                  <ul>
+                    <li>automatic and manual quantitative judgments</li>
+                    <li>qualitative judgments</li>
+                    <li>other metrics as deemed appropriate</li>
+                  </ul>
+                </li>
+              </ul>              
             </div>
           </div>
         </div>
       
-        <!-- Our Mission -->
+        <!-- 2 -->
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingTwo">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-              Our Mission
+              2. Score Release and Validity
             </button>
           </h2>
           <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
             <div class="accordion-body">
-              Our mission is to empower learners through accessible resources and hands-on
-              experiences that connect theory with practice.
+              <ul>
+                <li>Task organizers reserve the right to withhold scores for:
+                  <ul>
+                    <li>incomplete submissions</li>
+                    <li>erroneous submissions</li>
+                    <li>deceptive submissions</li>
+                    <li>rule-violating submissions</li>
+                  </ul>
+                </li>
+                <li>Inclusion of a submission's scores does not constitute endorsement.</li>
+              </ul>              
             </div>
           </div>
         </div>
       
-        <!-- Contact -->
+        <!-- 3 -->
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingThree">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-              Contact
+              3. Team Participation Rules
             </button>
           </h2>
           <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
             <div class="accordion-body">
-              You can reach us at <a href="mailto:example@email.com">example@email.com</a>
-              or visit our office during working hours.
+              <ul>
+                <li>Participants may be involved in only one team.</li>
+                <li>Exceptions may be granted with prior approval from organizers.</li>
+              </ul>              
+            </div>
+          </div>
+        </div>
+        <!-- 4 -->
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingTwo">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+              4. Account Management
+            </button>
+          </h2>
+          <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              <ul>
+                <li>Each team must create and use exactly one account on the designated platform.
+                </li>
+              </ul>              
+            </div>
+          </div>
+        </div>
+        <!-- 5 -->
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingTwo">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+              5. Team Constitution
+            </button>
+          </h2>
+          <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              <ul>
+                <li>Team membership cannot be changed after the evaluation period begins.</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <!-- 6 -->
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingTwo">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+              6. Development Period Rules
+            </button>
+          </h2>
+          <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              <ul>
+                <li>Teams can submit up to 999 submissions.</li>
+                <li>Results are visible only to the submitting team.</li>
+                <li>Leaderboard is disabled.</li>
+                <li>Warnings and errors are visible for each submission.</li>
+              </ul>              
+            </div>
+          </div>
+        </div>
+        <!--7-->
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingTwo">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+              7. Evaluation Period Rules
+            </button>
+          </h2>
+          <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              <ul>
+                <li>The teams are constrained to make 3 submissions.</li>
+                <li>Only the final submission will be considered official.</li>
+                <li>Warnings and errors are visible for each submission.</li>
+              </ul>              
+            </div>
+          </div>
+        </div>
+        <!--8-->
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingTwo">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+              2. Score Release and Validity
+            </button>
+          </h2>
+          <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              body
+            </div>
+          </div>
+        </div>
+        <!--9-->
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingTwo">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+              2. Score Release and Validity
+            </button>
+          </h2>
+          <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              body
+            </div>
+          </div>
+        </div>
+        <!--10-->
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingTwo">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+              2. Score Release and Validity
+            </button>
+          </h2>
+          <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              body
+            </div>
+          </div>
+        </div>
+        <!--11-->
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingTwo">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+              2. Score Release and Validity
+            </button>
+          </h2>
+          <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              body
+            </div>
+          </div>
+        </div>
+        <!--12-->
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingTwo">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+              2. Score Release and Validity
+            </button>
+          </h2>
+          <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              body
+            </div>
+          </div>
+        </div>
+        <!--13-->
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingTwo">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+              2. Score Release and Validity
+            </button>
+          </h2>
+          <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              body
             </div>
           </div>
         </div>
