--- a/index.html
+++ b/index.html
@@ -280,13 +280,14 @@
       <!-- Col 5: How to Participate Start -->
       <div id="Links"class="col col-12" style="margin: 2rem 0rem">
         <h3>💡 How to Participate</h3>
-        <p>
-          <strong>Register:</strong> Sign up on the CodaBench competition platform.
-          <strong>Tasks:</strong> Decide on the task(s) you want to participate in (Subtask 1, 2 and/or 3).
-          <strong>Download: </strong>Access to the datasets for each task will be provided in this repository.
-          <strong>Develop: </strong>Build your models using the provided data.
-          <strong>Submit:</strong> Submit your predictions on the CodaBench competition platform.
-        </p>
+        <ul>
+          <li><strong>Register:</strong> Sign up on the CodaBench competition platform.</li>
+          <li><strong>Tasks:</strong> Decide on the task(s) you want to participate in (Subtask 1, 2 and/or 3).</li>
+          <li><strong>Download:</strong> Access to the datasets for each task will be provided in this repository.</li>
+          <li><strong>Develop:</strong> Build your models using the provided data.</li>
+          <li><strong>Submit:</strong> Submit your predictions on the CodaBench competition platform.</li>
+        </ul>
+                
         <h3>💡 Evaluation</h3>
         <p>
           <ul>
