--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
           <li><strong>Develop:</strong> Build your models using the provided data.</li>
           <li><strong>Submit:</strong> Submit your predictions on the CodaBench competition platform.</li>
         </ul>
-                
+
         <h3>💡 Evaluation</h3>
         <p>
           <ul>
@@ -602,22 +602,22 @@
             <h3>💡 Communication</h3>
             <section class="cta-section container mb-5">
               <div class="row justify-content-center g-4">
-                <div class="col-md-4">
-                  <a href="https://discord.gg/XpJNRXWt" class="card text-center text-decoration-none shadow-sm">
+                <div class="col-md-2">
+                  <a href="https://discord.gg/XpJNRXWt" target="_blank class="card text-center text-decoration-none shadow-sm">
                     <div class="card-body">
                       <h3 class="card-title text-primary">📢 Join Discord </h3>
                     </div>
                   </a>
                 </div>
-                <div class="col-md-4">
-                  <a href="https://groups.google.com/g/polarization-semeval-2026-participants" class="card text-center text-decoration-none shadow-sm">
+                <div class="col-md-2">
+                  <a href="https://groups.google.com/g/polarization-semeval-2026-participants" target="_blank class="card text-center text-decoration-none shadow-sm">
                     <div class="card-body">
                       <h3 class="card-title text-success">🚀 Join Google Group</h3>
                     </div>
                   </a>
                 </div>
-                <div class="col-md-4">
-                  <a href="polarization-semeval-2026-organisers@googlegroups.com" class="card text-center text-decoration-none shadow-sm">
+                <div class="col-md-2">
+                  <a href="polarization-semeval-2026-organisers@googlegroups.com" target="_blank class="card text-center text-decoration-none shadow-sm">
                     <div class="card-body">
                       <h3 class="card-title text-white">📅 Contact Organizers</h3>
                     </div>
